src/test/ui/issues/issue-39559-2.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-39559-2.rs:14:24
   |
LL |     let array: [usize; Dim3::dim()]
   |                        ^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-39559-2.rs:14:24
   |
LL |     let array: [usize; Dim3::dim()]
   |                        ^^^^^^^^^^^ calling non-const function `<Dim3 as Dim>::dim`

error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-39559-2.rs:17:15
   |
LL |         = [0; Dim3::dim()];
   |               ^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-39559-2.rs:17:15
   |
LL |         = [0; Dim3::dim()];
   |               ^^^^^^^^^^^ calling non-const function `<Dim3 as Dim>::dim`

error[E0308]: mismatched types
  --> $DIR/issue-39559-2.rs:17:11
   |
LL |     let array: [usize; Dim3::dim()]
   |                -------------------- expected due to this
...
LL |         = [0; Dim3::dim()];
   |           ^^^^^^^^^^^^^^^^ expected `Dim3::dim()`, found `Dim3::dim()`
   |
   = note: expected array `[usize; _]`
              found array `[usize; _]`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0015, E0080, E0308.
For more information about an error, try `rustc --explain E0015`.
